# EventProcessing

./: .gitignore  README.md
EventProcessing/: locations.json  outputAverageValue.json  outputRaw.json  pyproject.toml  restats
EventProcessing/eventprocessing/: main.py  main3.py  plotter.py
EventProcessing/tests/: test_eventprocessing.py
