[tool.poetry]
name = "EventProcessing"
version = "0.1.0"
description = ""
authors = ["Oskar <oskar.williams@softwire.com>"]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.9"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
