[tool.poetry]
name = "EventProcessing"
version = "0.1.0"
description = ""
authors = ["Oskar <oskar.williams@softwire.com>"]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.9"
pylint = "^2.3"
seaborn = "^0.9.0"
pandas = "^0.25.1"
matplotlib = "^3.1"
plotly = "^4.1"
ipywidgets = "^7.5"
bokeh = "^1.3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
